Client-app/src/components/ClientProfile/ClientProfile.css
.clientProfile-container {
  height: 100vh;
  background-color: #f5f5f5;
}

.clientProfile-profileCard {
  padding-top: 15px !important;
  position: relative;
}

#clientProfile-avatar {
  width: 180px;
  height: 180px;
  box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.12);
}

.clientProfile-editIcon {
  position: absolute !important;
  top: 10px;
  right: 10px;
  width: 35px !important;
  height: 35px !important;
}

.label-positive {
  text-transform: uppercase;
  color: white;
  background: linear-gradient(rgb(233, 61, 61), rgb(241, 11, 11));
  font-size: 0.78rem;
  font-weight: 700;
  border-radius: 0.375rem;
  padding: 0.5em 1em;
}

.clientProfile-text {
  text-align: center;
}

.clientProfile-textDetail {
  font-size: 1rem;
  margin: 2px 0;
  color: var(--text-secondary);
}

.profile-name {
  text-align: center;
  font-weight: bold !important;
}

.clientProfile-statusBox {
  margin-bottom: 15px;
}

.clientProfile-priority-flag {
  color: black;
  padding-left: 5px;
  margin-bottom: -5px;
}

.clientProfile-priority-flag.clicked {
  color: red;
  padding-left: 5px;
  margin-bottom: -5px;
}

.status-card {
  border-style: none;
}

.status-card.clicked {
  border-style: double;
  border-color: red;
}

